# hands-on-rust

./: .gitignore
http-server/: Cargo.toml
http-server/.sqlx/: query-023c42ceeddc8c0eb5e79c7e0bd195fbcfa76d39b070beda84cffce08d803834.json  query-13f407410a9338f389fb9022a2d10554e3f69ce71e862db10d697c3b85e53ddb.json  query-2340e6304b054f958a6d04595da0de14e668282d463c2d228afec6eeee8c095b.json  query-888df17854c18a9011ef5b6433e5121245d34a3c38fcd3f71a623e1c22dff9fe.json  query-f77930362b409db00be141b2329aac523dcc39f6c909900edf7e246a57d826ee.json
http-server/migrations/: 20260311184011_create_users.sql  20260312084045_add_passwd.sql  20260312211637_add_non_null.sql
http-server/src/: auth.rs  error.rs  handlers.rs  main.rs  middleware.rs  models.rs  routes.rs  schema.rs
todo-app/: Cargo.toml
todo-app/src/: main.rs
url-shortener/: Cargo.toml
url-shortener/.sqlx/: query-16db85b924a2ea6fdd2536640b12e4df0a7bca92c759cb98f40b2f24390d777d.json  query-9944bc355a0fc11874c9025f564e615d57b8b2f358a5a709d017f6b012dbab9c.json
url-shortener/migrations/: 20260313132555_url-shortener.sql
url-shortener/src/: handlers.rs  main.rs  models.rs  redis_setup.rs  schema.rs
