[package]
name = "rust_learn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
axum = "0.8.8"
chrono = "0.4.41"
clap = { version = "4.5.60", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.32"
jsonwebtoken =  { version = "10.3.0", features = ["aws_lc_rs"] }
rand_core = "0.10.0"
reqwest = "0.13.2"
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "uuid"] }
time = "0.3.47"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "request-id"] }
tower_governor = "0.8.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
