[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "uuid"] }
dotenvy = "0.15.7"
redis = { version = "1.0.5" , features = ["tokio-comp", "cluster-async"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["serde", "v4"] }
nanoid = "0.4.0"
axum = "0.8.8"
